# boxxy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  test_rmcp_v2.rs
.github/workflows/: nightly.yml
crates/ai_core/: AGENTS.md  Cargo.toml
crates/ai_core/src/: lib.rs  utils.rs
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs
crates/app_menu/: AGENTS.md
crates/boxxy_agent/: AGENTS.md  Cargo.toml
crates/boxxy_agent/src/: claw.rs  ipc.rs  lib.rs  main.rs
crates/boxxy_agent/src/claw/: mod.rs  notifier.rs  registry.rs
crates/boxxy_agent/src/core/: state.rs
crates/boxxy_agent/src/daemon/: dreaming.rs  lifecycle.rs  mod.rs  power.rs  priority.rs  singleton.rs
crates/boxxy_agent/src/ipc/: claw.rs  client_tracker.rs  maintenance.rs  mod.rs  pty.rs
crates/boxxy_agent/src/maintenance/: mod.rs
crates/boxxy_agent/src/pty/: mod.rs  registry.rs
crates/boxxy_agent/src/subsystems/claw/: mod.rs
crates/boxxy_agent/src/subsystems/maintenance/: mod.rs
crates/boxxy_agent/src/subsystems/pty/: mod.rs
crates/boxxy_apps/src/: lib.rs
crates/boxxy_bookmarks/: Cargo.toml
crates/boxxy_bookmarks/src/: editor.rs  lib.rs  manager.rs  parser.rs  sidebar.rs  tab.rs
crates/boxxy_claw/: AGENTS.md  Cargo.toml
crates/boxxy_claw/src/: lib.rs  utils.rs
crates/boxxy_claw/src/engine/: agent.rs  agent_config.rs  context.rs  dispatcher.rs  history_utils.rs  mod.rs  session.rs
crates/boxxy_claw/src/engine/fsm/: router.rs  state.rs
crates/boxxy_claw/src/engine/summarization/: history.rs  mod.rs  wake.rs
crates/boxxy_claw/src/engine/tools/: file_ops.rs  memory.rs  mod.rs  orchestration.rs  scrollback.rs  set_state.rs  skills.rs  summon_headless.rs  tasks.rs  terminal.rs  workspace.rs
crates/boxxy_claw/src/engine/turn/: history.rs  mod.rs  persistence.rs  skills.rs  snapshot.rs
crates/boxxy_claw/src/memories/: db.rs  dreaming.rs  extraction.rs  flush.rs  hygiene.rs  mod.rs  tools.rs
crates/boxxy_claw/src/registry/: mod.rs  skills.rs  tests.rs  workspace.rs
crates/boxxy_claw/src/ui/: mod.rs
crates/boxxy_claw_protocol/: AGENTS.md  Cargo.toml
crates/boxxy_claw_protocol/src/: character_loader.rs  characters.rs  lib.rs
crates/boxxy_claw_ui/: AGENTS.md  Cargo.toml
crates/boxxy_claw_ui/src/: lib.rs  row_object.rs  sidebar.rs
crates/boxxy_claw_widget/: AGENTS.md  Cargo.toml
crates/boxxy_claw_widget/src/: claw_host.rs  claw_indicator.rs  dispatch.rs  lib.rs  overlay.rs  proposal.rs
crates/boxxy_claw_widget/src/msgbar/: AGENTS.md  attachment.rs  autocomplete.rs  history.rs  mod.rs
crates/boxxy_mcp/: AGENTS.md  Cargo.toml
crates/boxxy_mcp/src/: config.rs  lib.rs  manager.rs
crates/boxxy_mcp/src/client/: http.rs  stdio.rs  test_which.rs
crates/boxxy_mcp/src/rig_bridge/: mod.rs  schema.rs  tool.rs
crates/boxxy_msgbar/: AGENTS.md  Cargo.toml
crates/boxxy_msgbar/src/: attachment.rs  autocomplete.rs  history.rs  lib.rs
crates/boxxy_vte/: AGENTS.md
crates/boxxy_vte/src/: lib.rs
crates/command_palette/src/: lib.rs
crates/core_toolbox/: AGENTS.md  Cargo.toml
crates/core_toolbox/src/: clipboard.rs  file.rs  lib.rs  network.rs  system.rs  utils.rs
crates/core_toolbox/src/search/: tool.rs
crates/core_widgets/: Cargo.toml
crates/core_widgets/src/: autocomplete.rs  lib.rs  utils.rs
crates/db/: AGENTS.md
crates/db/src/: lib.rs  models.rs  store.rs
crates/keybindings/: AGENTS.md
crates/keybindings/src/: lib.rs
crates/model_selection/: AGENTS.md
crates/model_selection/src/: lib.rs  models.rs  registry.rs
crates/preferences/: AGENTS.md  Cargo.toml  build.rs
crates/preferences/src/: component.rs  config.rs  lib.rs
crates/preferences/src/about/: mod.rs
crates/preferences/src/advanced/: mod.rs
crates/preferences/src/agents/: mod.rs
crates/preferences/src/apis/: mod.rs
crates/preferences/src/appearance/: mod.rs
crates/preferences/src/characters/: mod.rs
crates/preferences/src/claw_ui/: mod.rs
crates/preferences/src/mcp/: mcp_dialog.rs  mod.rs
crates/preferences/src/previews/: mod.rs
crates/preferences/src/shortcuts/: mod.rs
crates/scenario_runner/: AGENTS.md  Cargo.toml
crates/scenario_runner/scenarios/: 01_pubsub_watchdog.yml  02_parallel_deployer.yml  03_resource_lock.yml  04_capability_routing.yml  05_tui_automation.yml
crates/scenario_runner/src/: lib.rs  main.rs  runner.rs  schema.rs
crates/sidebar/: Cargo.toml
crates/sidebar/src/: commands.rs  component.rs  lib.rs  markdown.rs  types.rs  widgets.rs
crates/telemetry/: AGENTS.md  Cargo.toml
crates/telemetry/src/: lib.rs
crates/terminal/: AGENTS.md  Cargo.toml
crates/terminal/src/: agent_manager.rs  claw_indicator.rs  claw_proposal.rs  component.rs  events.rs  lib.rs  overlay.rs  preview.rs  search_bar.rs
crates/terminal/src/pane/: app_menu.rs  claw.rs  claw_host.rs  events.rs  gestures.rs  mod.rs  preview.rs  ui.rs
crates/themes/: AGENTS.md  Cargo.toml  build.rs
crates/themes/src/: lib.rs  preview.rs  selector.rs
crates/viewer/: AGENTS.md  Cargo.toml
crates/viewer/src/: lib.rs  registry.rs  widget.rs
crates/viewer/src/parser/: blocks.rs  markdown.rs  mod.rs
crates/viewer/src/renderer/: code.rs  image.rs  mod.rs  text.rs
crates/window/: AGENTS.md  Cargo.toml
crates/window/src/: actions.rs  agent_deployer.rs  app_menu.rs  boxxyclaw_indicator_popover.rs  init.rs  lib.rs  state.rs  tab_menu.rs  ui.rs  updater.rs
crates/window/src/update/: events.rs  mod.rs  split.rs  tabs.rs  window_state.rs
crates/window/src/widgets/: mod.rs  notification.rs  notification_details.rs  notification_pill.rs
docs/: Development.md  GettingStarted.md
flatpak/: dev.boxxy.BoxxyTerminal.metainfo.xml  play.mii.Boxxy.metainfo.xml
resources/: resources.gresource.xml  style.css
resources/characters/: characters.json
resources/characters/kuro/: CHARACTER.toml
resources/characters/levi-kujo/: CHARACTER.toml
resources/characters/niko-una/: CHARACTER.toml
resources/prompts/: bookmark_generator.md  claw.md  memory_flush.md  memory_summarizer.md  privacy_policy.md
resources/ui/: claw_overlay.ui  preferences.ui
scripts/: install.sh
(+33 files in other folders)
