[workspace]
resolver = "2"
members = [
    "crates/sidebar",
    "crates/ai_core",
    "crates/app",
    "crates/command_palette",
    "crates/keybindings",
    "crates/preferences",
    "crates/terminal",
    "crates/themes",
    "crates/window",
    "crates/model_selection",
    "crates/boxxy_vte",
    "crates/boxxy_agent",
    "crates/command_palette",
    "crates/boxxy_claw",
    "crates/boxxy_msgbar",
    "crates/db",
    "crates/boxxy_bookmarks",
    "crates/core_widgets",
    "crates/core_toolbox",
    "crates/viewer",
    "crates/telemetry",
    ]

[workspace.package]
version = "0.0.31"
edition = "2024"
authors = ["Mii <miifrommera@gmail.com>"]
description = "Stupid Linux Terminal"
license = "MIT"

[workspace.lints.rust]
rust_2018_idioms = "deny"
unused_must_use = "deny"
unreachable_pub = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = "warn"
type_complexity = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
boxxy-model-selection = { path = "crates/model_selection" }
boxxy-keybindings = { path = "crates/keybindings" }
boxxy-terminal = { path = "crates/terminal" }
boxxy-themes = { path = "crates/themes" }
boxxy-window = { path = "crates/window" }
boxxy-core-widgets = { path = "crates/core_widgets" }
directories = "6.0.0"
cairo-rs = "0.22"
gdk-pixbuf = "0.22"
gio = { version = "0.22", features = ["v2_76"] }
glib = "0.22"
pango = "0.22"
glib-build-tools = "0.22"
gtk4 = { version = "0.11", features = ["v4_22"] }
libadwaita = { version = "0.9", features = ["v1_9"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sourceview5 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
async-channel = "2.5.0"
tokio = { version = "1.50", features = ["full"] }
lazy_static = "1.5.0"
futures-channel = "0.3.32"
futures-util = "0.3.32"
log = { version = "0.4.29", features = ["std", "serde", "release_max_level_info"] }
env_logger = "0.11.10"
rig-core = "0.34.0"
nix = { version = "0.31.2", features = ["process", "term", "fs", "signal", "ioctl", "user"] }
zbus = { version = "5.14.0", features = ["tokio", "p2p"] }
libc = "0.2"
enumflags2 = "0.7"
ashpd = { version = "0.13.9", features = ["flatpak", "open_uri"] }
gstreamer = "0.25.1"
image = "0.25"
gsk4 = "0.11"
regex = "1.12.3"
parking_lot = "0.12.5"
base64 = "0.22.1"
bitflags = "2.11.0"
home = "0.5.12"
regex-automata = "0.4.14"
unicode-width = "0.2.2"
arc-swap = "1.9.0"
cursor-icon = "1.2"
memchr = "2.8"
miniz_oxide = "0.9.1"
rustix-openpty = "0.2.0"
rustix = "1.1.4"
signal-hook = "0.4.3"
self_update = { version = "0.43.1", features = ["archive-tar", "compression-flate2"] }
tempfile = "3.27.0"
tar = "0.4.45"
flate2 = "1.1.9"
sha2 = "0.11"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
serde_yml = "0.0.12"
thiserror = "2.0"
notify = "8.2.0"
uuid = { version = "1.23.0", features = ["v4"] }
petname = "2.0.2"
getrandom = "0.4.2"
toml = "1.1.1"
boxxy-bookmarks = { path = "crates/boxxy_bookmarks" }
sysinfo = "0.38.4"
arboard = "3.6.1"
pulldown-cmark = "0.13.3"
syntect = "5.3.0"
boxxy-viewer = { path = "crates/viewer" }
boxxy-telemetry = { path = "crates/telemetry" }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["http-json"] }
opentelemetry-http = "0.31.0"
opentelemetry-stdout = { version = "0.31.0", features = ["metrics"] }
