[package]
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
name = "boxxy-ai-core"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["full"] }
rig-core.workspace = true
reqwest.workspace = true
boxxy-model-selection = { path = "../model_selection" }
ashpd = { workspace = true, features = ["flatpak"] }
