[package]
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
name = "boxxy-agent"

[dependencies]
zbus = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
arboard = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
async-channel = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
directories = { workspace = true }
futures-util = { workspace = true }
enumflags2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
petname = { workspace = true }
boxxy-telemetry = { path = "../telemetry" }
boxxy-db = { path = "../db" }
boxxy-preferences = { path = "../preferences" }
boxxy-model-selection = { path = "../model_selection" }
boxxy-ai-core = { path = "../ai_core" }
boxxy-claw-protocol = { path = "../boxxy_claw_protocol" }
boxxy-claw = { path = "../boxxy_claw" }

[dev-dependencies]
tempfile = { workspace = true }
