[package]
name = "boxxy-claw-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
rig-core = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
zvariant = { workspace = true }
