[package]
name = "boxxy-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Model Context Protocol (MCP) client for Boxxy"
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
rmcp.workspace = true
keyring.workspace = true
tokio = { workspace = true, features = ["process", "sync", "time", "macros", "rt"] }
rig-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
reqwest.workspace = true
