[package]
name = "boxxy-msgbar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
gtk4.workspace = true
glib.workspace = true
log.workspace = true
tokio.workspace = true
boxxy-preferences = { path = "../preferences" }
boxxy-claw = { path = "../boxxy_claw" }
boxxy-ai-core = { path = "../ai_core" }
boxxy-db = { path = "../db" }
uuid = { workspace = true, features = ["v4"] }
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
boxxy-core-widgets.workspace = true
lazy_static.workspace = true
