[package]
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
name = "boxxy-terminal"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
boxxy-vte = { path = "../boxxy_vte" }
boxxy-preferences = { path = "../preferences" }
boxxy-themes = { path = "../themes" }
boxxy-ai-core = { path = "../ai_core" }
boxxy-msgbar = { path = "../boxxy_msgbar" }
boxxy-agent = { path = "../boxxy_agent" }
boxxy-claw = { path = "../boxxy_claw" }
boxxy-claw-protocol = { path = "../boxxy_claw_protocol" }
boxxy-claw-ui = { path = "../boxxy_claw_ui" }
boxxy-viewer = { path = "../viewer" }
async-channel.workspace = true
ashpd.workspace = true
tokio.workspace = true
zbus.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
lazy_static.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
gstreamer.workspace = true
log.workspace = true
uuid.workspace = true
getrandom.workspace = true
directories.workspace = true
