[package]
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
name = "boxxy-window"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
boxxy-terminal = { path = "../terminal" }
boxxy-preferences = { path = "../preferences" }
boxxy-keybindings = { path = "../keybindings" }
boxxy-themes = { path = "../themes" }
boxxy-sidebar = { path = "../sidebar" }
boxxy-claw = { path = "../boxxy_claw" }
boxxy-claw-protocol = { path = "../boxxy_claw_protocol" }
boxxy-claw-ui = { path = "../boxxy_claw_ui" }
boxxy-bookmarks = { path = "../boxxy_bookmarks" }
boxxy-ai-core = { path = "../ai_core" }
boxxy-model-selection = { path = "../model_selection" }
boxxy-command-palette = { path = "../command_palette" }
anyhow.workspace = true
sourceview5.workspace = true
async-channel.workspace = true
tokio.workspace = true
uuid.workspace = true
getrandom.workspace = true
serde.workspace = true
log.workspace = true
reqwest.workspace = true
self_update.workspace = true
tempfile.workspace = true
tar.workspace = true
flate2.workspace = true
sha2.workspace = true
gstreamer.workspace = true
rand = "0.10.0"
zbus = { workspace = true }
home = { workspace = true }
ashpd = { workspace = true }
